--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -8,7 +8,7 @@ requirements = []
 [contracts.orange-protocol]
 path = 'contracts/orange-protocol.clar'
 clarity_version = 3
-epoch = 'latest'
+epoch = 3.0
 [repl.analysis]
 passes = ['check_checker']
 
